title.css
#list, #editor, #tClose, #tDelete{
    display: none;
}
#page{
    margin: 8px;
    padding-top: 50px;
}
hr{
    margin: 8px !important;
}
#tools{
    display: flex;
    align-content: flex-end;
    gap: 8px;
    padding: 8px;
}
#toolbar{
    display: flex;
    position: fixed;
    top: 0px;
    left: 0px;
    z-index: 1;
    width: -webkit-fill-available;
}
#header{
    display: flex;
    gap: 5px;
    width: 100%;
    padding: 8px;
    align-items: center;
    background-color: white;
    z-index: 1;
}
#shelflist{
    width: -webkit-fill-available;
    color: #000000;
    height: 30px;
    max-width: 50%;
    outline: none;
    display: none;
}
#tShelfList{
    max-width: 50%;
}
#tShelfListOuter, #tShelfList{
    width: -webkit-fill-available;
}
#logo{
    height: 38px;
    border-radius: 6px;
}
#shelflist:disabled{
    color: #999999;
}
#docname{
    font-size: 24px;
    font-weight: 500;
}
#doc, #docname {
    width: 100%;
}
#doc{
    height: 70%;
    margin-top: 8px;
}
#docname{
    font-size: 24px;
    font-weight: 500;
}
input{
    margin-bottom: 5px;
}
dialog{
    border: solid 1px black;
    border-radius: 6px;
}
.toolbutton{
	font-size: 24px;
}
.notecard{
    width: auto;
    margin-inline: 15%;
}
@media screen and (max-width: 600px){
    #toolbar{
        flex-wrap: wrap;
        position: relative;
        top:auto;
        left:auto;
    }
    #tools{
        width: -webkit-fill-available;
        display: flex;
        justify-content: space-evenly;
        position: fixed;
        padding: 8px;
        bottom: 20px;
        left: 0px;
        z-index: 1;
        background-color: white;
    }
    #header{
        position: fixed;
        top: 0px;
        left: 0px;
    }
    #tRenameShelf, #tDeleteShelf{
        font-size: 20px;
    }
    p, #doc, #docname, #shelflist, dialog input, dialog button {
        font-size: 20px;
    }
    #tNewNote, #tClose, #tDelete{
        width: -webkit-fill-available;
    }
    #tShelfListOuter, #tShelfList{
        width: -webkit-fill-available;
        max-width: 100% !important;
    }
    #list a{
        font-size: 22px;
    }
    .notecard{
        width: 100%;
        margin-inline: 0px;
    }
}	

